--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
 }
 #mainCanvas {
   border: 2px solid black;
-  background-color: white;
+  background-color: black;
   display: block;
   min-width: 300px;
   min-height: 200px;
